[gd_scene load_steps=3 format=3 uid="uid://ga7gbovh7j5q"]

[ext_resource type="Texture2D" uid="uid://8oqmlyfn2bqj" path="res://sprites/space_invaders_other_dude2.png" id="1_6ahtt"]
[ext_resource type="Script" path="res://scripts/enemy/base_enemy.gd" id="1_ah7db"]

[node name="Enemy" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_ah7db")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_6ahtt")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="Movement" type="Node2D" parent="."]

[node name="Weapon" type="Node2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.2, 0.6)
scale = Vector2(0.98, 1)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
